GNOME Bugzilla – Bug 707317
mpegdemux: doesn't send events to pads that are not linked
Last modified: 2013-09-18 16:50:24 UTC
Created attachment 253905 [details] [review] Patch This is inconsistent with the rest of gstreamer and probably a bad behavior.
Agreed. Thanks for the patch! commit e43d1959a866ebcc838424db412095426428a7f5 Author: Matej Knopp <matej.knopp@gmail.com> Date: Mon Sep 2 22:54:32 2013 +0200 mpegdemux: send events on pads that are not linked Someone might be waiting for certain events with a probe. https://bugzilla.gnome.org/show_bug.cgi?id=707317